fixed z-index of img upload btn

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.css
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.css
@@ -1193,7 +1193,7 @@ p:empty {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  z-index: 100;
+  z-index: 80;
   background: #FFFFFFE6;
   height: 100%;
   top: 0;
